--- a/src/app.postcss
+++ b/src/app.postcss
@@ -7,7 +7,7 @@ body {
 	@apply transition-colors duration-500;
 	@apply antialiased text-gray-400 bg-neutral-900;
 	@apply leading-normal tracking-normal text-base font-normal break-words;
-	@apply font-sans text-base lg:text-xl;
+	@apply font-light text-base lg:text-xl;
 }
 @layer components {
 	.user-select-none {
